--- a/src/openforms/analytics_tools/templates/analytics_tools/all_bottom.html
+++ b/src/openforms/analytics_tools/templates/analytics_tools/all_bottom.html
@@ -1,3 +1,4 @@
 <template class="analytics-scripts">
     {% include "analytics_tools/siteimprove.html" with request=request only %}
+    {% include "analytics_tools/expoints.html" with request=request only %}
 </template>
