:lipstick: [#4051] Implement styling for the JsonWidget/DataPreview components
Sizing is based on number of rows/cols desired and set through a custom
CSS property on the respective components.

--- a/src/openforms/scss/components/admin/_dsl-editor.scss
+++ b/src/openforms/scss/components/admin/_dsl-editor.scss
@@ -3,14 +3,10 @@
   flex-wrap: wrap;
   justify-content: flex-start;
   align-items: center;
+  column-gap: 0.5em;
+  row-gap: 0.5em;
 
   &__node {
-    &:not(:last-child) {
-      margin-right: 0.5em;
-    }
-
-    margin-bottom: 0.5em;
-
     // account for possibly long labels
     select,
     input {
