--- a/src/openforms/scss/components/admin/_json-data-preview.scss
+++ b/src/openforms/scss/components/admin/_json-data-preview.scss
@@ -1,15 +1,5 @@
-@import '../../vars';
+@use './json-editor';
 
 .json-data-preview {
-  display: block;
-
-  &__toggle {
-    font-weight: normal;
-  }
-
-  &__preview {
-    display: block;
-    background: var(--json-data-preview-background-color, #eee);
-    padding: 0.5em;
-  }
+  @include json-editor.container;
 }
