:lipstick: [#4456] Display the environment info in the branding
The header is defined as sticky, so we don't have to mess with an
extra sticky element somewhere on the page, which is tougher than it
seems because some of the form submit rows (submit buttons) are
already sticky to the bottom of the page, and there is overlap with
the Django Debug Toolbar handle in development.

Additionally, on mobile, there already is limited screen space, so we
should be careful.

This approach wraps properly on mobile and narrow viewports and doesn't
take additional space (the header on mobile is quite bad by itself, but
that's out of scope).

--- a/src/openforms/scss/admin/_admin_theme.scss
+++ b/src/openforms/scss/admin/_admin_theme.scss
@@ -236,26 +236,16 @@ div.breadcrumbs {
 }
 
 /**
- * Environment banner
+ * Environment information
  */
-.env {
+.env-info {
   display: block;
-  line-height: 35px;
-  text-align: center;
-  font-weight: bold;
-  text-transform: uppercase;
-  color: $color_secondary;
-  background-color: $color_dark;
-  position: fixed;
-  top: 0;
-  height: 35px;
-  width: 300px;
-  left: 50%;
-  margin-left: -150px;
-  z-index: 1000001;
-  box-shadow:
-    0 4px 8px 0 rgba(0, 0, 0, 0.2),
-    0 6px 20px 0 rgba(0, 0, 0, 0.2);
+  align-self: center;
+  padding-inline: 8px;
+  padding-block: 5px;
+  background-color: var(--of-env-info-background-color, var(--secondary));
+  color: var(--of-env-info-color, var(--primary-fg));
+  border-radius: 3px;
 }
 
 /**
