--- a/src/openforms/templates/admin/base_site.html
+++ b/src/openforms/templates/admin/base_site.html
@@ -1,5 +1,5 @@
 {% extends "admin/base.html" %}
-{% load i18n static multidomain %}
+{% load i18n static multidomain utils %}
 
 {% block title %}{{ title }} | {{ settings.PROJECT_NAME }}{% endblock %}
 
@@ -20,7 +20,10 @@
 {% endblock extrahead %}
 
 {% block branding %}
-    <h1 id="site-name"><a href="{% url 'admin:index' %}">{{ settings.PROJECT_NAME }} {% trans 'Administration' %}</a></h1>
+    <h1 id="site-name">
+        <a href="{% url 'admin:index' %}">{{ settings.PROJECT_NAME }} {% trans "Administration" %}</a>
+    </h1>
+    {% environment_info %}
     {% if user.is_anonymous %}
       {% include "admin/color_theme_toggle.html" %}
     {% endif %}
@@ -59,13 +62,6 @@
 {# end block usertools #}
 
 {% block nav-global %}{% endblock %}
-
-{% block messages %}
-    {% if settings.ENVIRONMENT_SHOWN_IN_ADMIN %}
-        <div class="env env-{{ settings.ENVIRONMENT }}">{{ settings.ENVIRONMENT }}</div>
-    {% endif %}
-    {{ block.super }}
-{% endblock %}
 
 {% block footer %}
     <div id="footer">
