:alien: [#4567] Fix fieldsets being hidden
Storybook doesn't load bootstrap, which sometimes leads to surprises
when class names conflict. We need some BS overrides in the modal
otherwise entire groups of fields are hidden.

--- a/src/openforms/scss/components/admin/_ReactModal.scss
+++ b/src/openforms/scss/components/admin/_ReactModal.scss
@@ -120,5 +120,10 @@
     input[type='text'] {
       inline-size: var(--of-admin-input-field-size);
     }
+
+    // BOOTSTRAP + DJANGO ADMIN IS A TERRIBLE IDEA
+    .collapse:not(.show) {
+      display: inherit;
+    }
   }
 }
