:children_crossing: Link to all relevant configuration in overview
* Added missing link to objects API groups
* Added missign link to zgw API groups
* Fixed displaying multiple actions (separator was missing)

--- a/src/openforms/config/templates/admin/config/overview.html
+++ b/src/openforms/config/templates/admin/config/overview.html
@@ -44,6 +44,7 @@
                                         {% else %}
                                         {{ label }}
                                         {% endif %}
+                                        {% if not forloop.last %}|{% endif %}
                                     {% endfor %}
                                 </td>
                             </tr>
