:children_crossing: [#4577] Replace object type select with react-select
Styled the react-select to have similar dimensions to the native select
elements, while allowing search and having a proper loading indicator.

TODO: internationalized literals/messages, such as the 'no options' and
'loading' messages.

--- a/src/openforms/scss/_vendor.scss
+++ b/src/openforms/scss/_vendor.scss
@@ -7,6 +7,7 @@
 @import './vendor/tinymce';
 @import './vendor/django-two-factor-auth';
 @import './vendor/design-token-editor';
+@import './vendor/react-select';
 
 #openforms-container {
   @include margin(
