:lipstick: [#4597] Leave empty fields empty in submission PDF
previously these fields were marked as `(not filled in)`

Backport-of: #4604

--- a/src/openforms/scss/pdfs/_submission-step-row.scss
+++ b/src/openforms/scss/pdfs/_submission-step-row.scss
@@ -51,6 +51,7 @@
     @include body();
     word-break: break-all;
     margin-bottom: 0.5em;
+    min-height: 1em;
 
     &--empty {
       font-style: italic;
