:lipstick: [#4606] Amend styles for error state
* The modal spacing is a cheeky workaround for tab error icons that would
  otherwise be cut off by the overflow: auto due to the desired scroll
  behaviour inside a form modal.
* The react-select styles ensure the border color of the select is consistent
  with other input types in the django admin style (red border if there are
  validation errors)
* The changelist styles ensure that items in a table row with validation
  errors don't break the (vertical) alignment between them - as soon as
  any has a validation error, its content will be pushed down so we need
  to align to the bottom of the table cell (like in the variables table
  styles).

--- a/src/openforms/scss/components/admin/_ReactModal.scss
+++ b/src/openforms/scss/components/admin/_ReactModal.scss
@@ -53,10 +53,10 @@
     }
   }
 
-  &__header {
-    &:not(:last-child) {
-      margin-bottom: 1em;
-    }
+  &__header + * {
+    // leave room for absolute positioned elements that otherwise get cut off by the
+    // overflow: auto
+    padding-block-start: 1em;
   }
 
   &__close {
