:art: [#4606] Fix casing, CSS code and address prop types warnings

--- a/src/openforms/scss/components/admin/_catalogi-type-option.scss
+++ b/src/openforms/scss/components/admin/_catalogi-type-option.scss
@@ -1,6 +1,6 @@
 @use 'microscope-sass/lib/bem';
 
-.document-type-option {
+.catalogi-type-option {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
