--- a/src/openforms/scss/components/admin/_index.scss
+++ b/src/openforms/scss/components/admin/_index.scss
@@ -21,7 +21,7 @@
 
 // Form design UI
 @import './select';
-@import './document-type-option';
+@import './catalogi-type-option';
 
 // Logic editor UI
 @import './dsl-editor';
