--- a/src/openforms/scss/_vars.scss
+++ b/src/openforms/scss/_vars.scss
@@ -28,6 +28,7 @@ $django-hijack-yellow: #ffe761;
   /* Dimensions */
   --of-admin-input-field-size: 40em; // original: 20em;
   --of-admin-checkbox-gap: 5px;
+  --of-admin-select-min-inline-size: 200px;
   --of-admin-select-max-inline-size: 300px;
 
   /* Tooltip */
