--- a/src/openforms/scss/components/admin/_select.scss
+++ b/src/openforms/scss/components/admin/_select.scss
@@ -1,3 +1,4 @@
 .form-variable-dropdown {
+  min-inline-size: var(--of-admin-select-min-inline-size);
   max-inline-size: var(--of-admin-select-max-inline-size);
 }
