--- a/src/openforms/scss/components/admin/_ReactModal.scss
+++ b/src/openforms/scss/components/admin/_ReactModal.scss
@@ -7,7 +7,7 @@
     align-items: center;
 
     position: fixed;
-    z-index: 10000000;
+    z-index: 1000;
     top: 0;
     right: 0;
     bottom: 0;
