:sparkles: [#4686] Added custom registration form component for StUF-ZDS

--- a/src/openforms/scss/components/admin/_index.scss
+++ b/src/openforms/scss/components/admin/_index.scss
@@ -10,6 +10,7 @@
 @import './form-object-tools';
 @import './json-data-preview';
 @import './array-input';
+@import './array-multiple-inputs';
 @import './json-widget';
 @import './plugin-config-react';
 @import './session-status';
