:sparkles: [#4686] Added custom registration form component for StUF-ZDS

--- a/src/openforms/scss/components/admin/_index.scss
+++ b/src/openforms/scss/components/admin/_index.scss
@@ -11,6 +11,7 @@
 @import './json-data-preview';
 @import './array-input';
 @import './json-widget';
+@import './payment-status-mapping-field';
 @import './plugin-config-react';
 @import './session-status';
 @import './variables-editor';
