:lipstick: [#4686] PaymentStatusUpdateMapping component styling

--- a/src/openforms/scss/components/admin/_index.scss
+++ b/src/openforms/scss/components/admin/_index.scss
@@ -10,8 +10,8 @@
 @import './form-object-tools';
 @import './json-data-preview';
 @import './array-input';
-@import './array-multiple-inputs';
 @import './json-widget';
+@import './payment-status-mapping-field';
 @import './plugin-config-react';
 @import './session-status';
 @import './variables-editor';
