:ok_hand: [#4608] PR feedback
* make VariableMapping generic by moving it outside of DMN directory
* rename extraData to configurationContext
* add test for plugin configurationContext
* rename prefillAttribute to prefillProperty for Objects API prefill
* move VariableMapping styling to its own file
* define mapping for prefill plugins to components

--- a/src/openforms/scss/components/admin/_index.scss
+++ b/src/openforms/scss/components/admin/_index.scss
@@ -18,6 +18,7 @@
 @import './confirmation-page';
 @import './column-field-value';
 @import './confirmation-email-template';
+@import './variablemapping';
 
 // Form design UI
 @import './select';
