:lipstick: [#4711] made .form-row styling more specific

--- a/src/openforms/scss/admin/_vendor-fixes.scss
+++ b/src/openforms/scss/admin/_vendor-fixes.scss
@@ -1,10 +1,12 @@
 .form-row {
-  // bootstrap styles compete with django .form-row styles...
-  display: block !important;
-
   > div > .flex-container > label {
     box-sizing: initial;
   }
+}
+
+// bootstrap styles compete with django .form-row styles...
+.model-formdefinition .form-row > .errorlist {
+  width: 100%;
 }
 
 div:has(> .help):not(:has(> .fieldBox)) {
