:children_crossing: [#4608] Add arrows to indicate mapping direction
Since there are two columns for source/target in the variable mapping
component, it makes sense to display the direction of assignment
with an arrow.

--- a/src/openforms/scss/components/admin/_variablemapping.scss
+++ b/src/openforms/scss/components/admin/_variablemapping.scss
@@ -5,4 +5,9 @@
     table-layout: fixed;
     inline-size: 100%;
   }
+
+  @include bem.element('direction-icon') {
+    vertical-align: middle;
+    text-align: center;
+  }
 }
