:recycle: [#4608] Ensure that plugin dropdown is part of core form
This way, plugin-specific configuration forms cannot accidentally make
it impossible to change the plugin type again when a mistake is made,
and it reduces the code repetition.

--- a/src/openforms/scss/admin/_admin_theme.scss
+++ b/src/openforms/scss/admin/_admin_theme.scss
@@ -80,6 +80,10 @@ div.breadcrumbs {
   }
 }
 
+.module.module--spaceless {
+  margin-block-end: 0;
+}
+
 /* Important is used because Django templates include their own style, after ours */
 #changelist-filter {
   a:focus,
