:sparkles: [#4546] Enable soft required errors display component in builder

--- a/src/openforms/scss/components/builder/_builder.scss
+++ b/src/openforms/scss/components/builder/_builder.scss
@@ -67,7 +67,7 @@ div.flatpickr-calendar.open {
   .tab-pane.active {
     min-block-size: 50vh;
 
-    &:has(.formio-component-content) {
+    &:has(.formio-component-content, .formio-component-softRequiredErrors) {
       min-block-size: 0;
     }
   }
