:wheelchair: [#4720] Skiplink as first focusable element and visible on focus

--- a/src/openforms/templates/404.html
+++ b/src/openforms/templates/404.html
@@ -1,6 +1,7 @@
 {% extends 'master.html' %}
 
 {% block extra_css %}{% endblock %}
+{% block skiplink %}{% endblock %}
 
 {% block content %}
   <h1>Sorry, the requested page could not be found (404)</h1>
