--- a/src/openforms/ui/static/ui/scss/components/skiplink/_skiplink.scss
+++ b/src/openforms/ui/static/ui/scss/components/skiplink/_skiplink.scss
@@ -1,7 +1,10 @@
 .skiplink {
   position: absolute;
-  top: -100vh;
-  left: -100vh;
+
+  &:not(&:focus) {
+    top: -100vh;
+    left: -100vh;
+  }
 
   @media print {
     display: none;
