--- a/src/openforms/submissions/templates/report/submission_report.html
+++ b/src/openforms/submissions/templates/report/submission_report.html
@@ -6,7 +6,11 @@
 <html lang="{{ LANG }}" class="{{ theme.get_classname }}">
     <head>
         <meta charset="utf-8">
-        <title>{% block title %}{% trans "Summary PDF" %}{% endblock %}</title>
+        <title>{% block title %}
+            {% blocktrans with form_name=report.form.name trimmed %}
+                {{ form_name }}: PDF report
+            {% endblocktrans %}
+        {% endblock %}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="{% static 'bundles/pdf-css.css' %}" media="all" rel="stylesheet" />
         {% block extra_css %}{% endblock %}
