:bug: [#4726] Fixing the styling for form delete buttons

--- a/src/openforms/scss/components/builder/_admin-fixes.scss
+++ b/src/openforms/scss/components/builder/_admin-fixes.scss
@@ -9,6 +9,10 @@
   height: auto;
 }
 
+.submit-row .deletelink {
+  box-sizing: content-box;
+}
+
 .formio-dialog-content {
   margin: 50px auto !important;
 }
