:wheelchair: [#4798] Using a real button for modal close

--- a/src/openforms/scss/components/admin/_ReactModal.scss
+++ b/src/openforms/scss/components/admin/_ReactModal.scss
@@ -61,9 +61,12 @@
 
   &__close {
     position: absolute;
-    top: 20px;
-    right: 20px;
+    top: 12px;
+    right: 12px;
+    padding: 8px;
     cursor: pointer;
+    background: transparent;
+    border: none;
     opacity: 0.5;
     line-height: 1;
 
