--- a/src/openforms/emails/templates/emails/confirmation/content.html
+++ b/src/openforms/emails/templates/emails/confirmation/content.html
@@ -12,9 +12,7 @@ You have submitted the form "{{ tt_openvariable }} form_name {{ tt_closevariable
 Your reference is: {{ tt_openvariable }} public_reference {{ tt_closevariable }}<br>
 <br>
 
-
-{{ tt_openblock }} cosign_information {{ tt_closeblock }}<br>
-{{ tt_openblock }} summary {{ tt_closeblock }}<br>
+{{ tt_openblock }} confirmation_summary {{ tt_closeblock }}<br>
 {{ tt_openblock }} appointment_information {{ tt_closeblock }}<br>
 {{ tt_openblock }} payment_information {{ tt_closeblock }}<br><br>
 
