:lipstick: Allow long words to wrap in steps nav
Without wrapping, the delete icon cannot be reached to delete a step
because the step name is pushing it behind the form step details.

--- a/src/openforms/scss/components/admin/_list.scss
+++ b/src/openforms/scss/components/admin/_list.scss
@@ -36,6 +36,13 @@
       align-items: center;
     }
   }
+
+  &__item-text {
+    &--allow-wrap {
+      word-break: break-all;
+      overflow-wrap: anywhere;
+    }
+  }
 }
 
 .list__item--active {
