:speech_balloon: [#4320] Update default cosign request template
* Added better structure to the email
* Used simpler language for accessibility

Existing instances unfortunately do not automatically get this
improvement, they will have to edit their configuration.

--- a/src/openforms/emails/templates/emails/co_sign/request.html
+++ b/src/openforms/emails/templates/emails/co_sign/request.html
@@ -3,23 +3,27 @@
 {% capture as tt_openvariable silent %}{% templatetag openvariable %}{% endcapture %}
 {% capture as tt_closevariable silent %}{% templatetag closevariable %}{% endcapture %}
 
-{% capture as instruction silent %}
-{% if omit_form_link %}{% blocktranslate %}Please visit the form page on our website and click on the 'co-sign' button.{% endblocktranslate %}
-{% else %}{% blocktranslate %}
-Please visit the form page by navigating to the following link:
-<a href="{{ tt_openvariable }} form_url {{ tt_closevariable }}">{{ tt_openvariable }} form_url {{ tt_closevariable }}</a>.
-{% endblocktranslate %}{% endif %}{% endcapture %}
-
 {% blocktranslate %}
-<p>This is a request to co-sign form "{{ tt_openvariable }} form_name {{ tt_closevariable }}".</p>
-
-<p>{{ instruction }}</p>
+<p>Dear reader,</p>
 
 <p>
-    You will then be redirected to authenticate yourself. After authentication, fill in
-    the following code to retrieve the form submission:
-    <br>
-    <br>
-    <strong>{{ tt_openvariable }} code {{ tt_closevariable }}</strong>
+Someone submitted the form "{{ tt_openvariable }} form_name {{ tt_closevariable }}"
+via the website on {{ tt_openvariable }} submission_date {{ tt_closevariable }}. This
+submission is not complete yet without your signature.
 </p>
+
+<h2>Cosigning required</h2>
+
+<p>
+With the link below you can log in and sign the form submission. Then, we will
+process the request.
+</p>
+
+<p>
+<a href="{{ tt_openvariable }} form_url {{ tt_closevariable }}">{{ tt_openvariable }} form_url {{ tt_closevariable }}</a>
+</p>
+
+<p>Kind regards,</p>
+
+<p>Open Forms</p>
 {% endblocktranslate %}
