--- a/src/openforms/emails/templates/emails/templatetags/appointment_information.html
+++ b/src/openforms/emails/templates/emails/templatetags/appointment_information.html
@@ -53,17 +53,12 @@
     </table>
 
     <p>
-        {% trans "If you want to cancel or change your appointment, you can do so below." %}
+        {% trans "If you want to cancel your appointment, you can do so below." %}
+    </p>
+    <p>
+        {% trans "If you wish to change your appointment, please cancel it using the link below and create a new one." %}
     </p>
     <p>
         <a href="{{ appointment_cancel_link }}" rel="nofollow">{% trans "Cancel appointment" %}</a>
     </p>
-    <p>
-        {% if appointment_change_link %}
-            <a href="{{ appointment_change_link }}" rel="nofollow">{% trans "Change appointment" %}</a>
-        {% else %}
-            {% trans "If you wish to change your appointment, please cancel it using the above link and create a new one." %}
-        {% endif %}
-    </p>
-
 {% endif %}
