[#4321] Allow specific amount of submissions per form

--- a/src/openforms/submissions/templates/submissions/resume_form_error.html
+++ b/src/openforms/submissions/templates/submissions/resume_form_error.html
@@ -23,6 +23,10 @@
             {% blocktrans trimmed %}
                 This form is currently undergoing maintenance. Please try again later.
             {% endblocktrans %}
+        {% elif error.detail.code == 'form-maximum-submissions' %}
+            {% blocktrans trimmed %}
+                Unfortunately, this form is no longer available for submissions.
+            {% endblocktrans %}
         {% endif %}
     </div>
 </div>
