--- a/src/openforms/scss/components/admin/_ReactModal.scss
+++ b/src/openforms/scss/components/admin/_ReactModal.scss
@@ -64,10 +64,14 @@
     top: 20px;
     right: 20px;
     cursor: pointer;
+    color: var(--body-fg);
+    background: transparent;
+    border: none;
     opacity: 0.5;
     line-height: 1;
 
-    &:hover {
+    &:hover,
+    &:focus {
       opacity: 0.8;
     }
   }
