:lipstick: [#4949] Modal close button on dark mode
The modal close button changes color based on the light/dark mode of the page.

In addition, focus now increases the button opacity, making it more user-friendly

--- a/src/openforms/scss/components/admin/_ReactModal.scss
+++ b/src/openforms/scss/components/admin/_ReactModal.scss
@@ -74,12 +74,14 @@
     right: 12px;
     padding: 8px;
     cursor: pointer;
+    color: var(--body-fg);
     background: transparent;
     border: none;
     opacity: 0.5;
     line-height: 1;
 
-    &:hover {
+    &:hover,
+    &:focus {
       opacity: 0.8;
     }
   }
