--- a/src/openforms/forms/templates/admin/forms/formstatistics/export_form.html
+++ b/src/openforms/forms/templates/admin/forms/formstatistics/export_form.html
@@ -26,7 +26,7 @@
 <h1>{% trans 'Export submission statistics' %}</h1>
 
 <div id="content-main">
-    <form action="." method="post">
+    <form action="." method="post" id="export-statistics">
         {% csrf_token %}
 
         <fieldset class="module aligned">
