:bug: [#4650] Fix styling of registrator screen
Some class names and stylesheets were missing for the inline radio
choices, causing the page to look janky.

--- a/src/openforms/templates/includes/forms/radio.html
+++ b/src/openforms/templates/includes/forms/radio.html
@@ -8,7 +8,7 @@
             utrecht-form-fieldset__legend
             utrecht-form-fieldset__legend--html-legend
             utrecht-form-field__label">
-            <label class="utrecht-form-label utrecht-form-label--openforms-required">
+            <label class="utrecht-form-label utrecht-form-label--openforms utrecht-form-label--openforms-required">
                 {{ field.label }}
             </label>
         </legend>
