--- a/src/openforms/ui/static/ui/scss/components/_index.scss
+++ b/src/openforms/ui/static/ui/scss/components/_index.scss
@@ -5,6 +5,8 @@
 @import 'page-header';
 
 // Custom
+@import '../../../../../scss/components/form-choices';
+
 @import 'a11y-toolbar';
 @import 'auth-mode';
 @import 'fa-icon';
