--- a/src/openforms/utils/templates/of_utils/widgets/radio_option.html
+++ b/src/openforms/utils/templates/of_utils/widgets/radio_option.html
@@ -1,7 +1,7 @@
 <div class="utrecht-form-field utrecht-form-field--radio utrecht-form-field--openforms">
     {% include "django/forms/widgets/input.html" %}
     <p class="utrecht-paragraph utrecht-form-field__label utrecht-form-field__label--radio">
-        <label for="{{ widget.attrs.id }}" class="utrecht-form-label utrecht-form-label--radio">
+        <label for="{{ widget.attrs.id }}" class="utrecht-form-label utrecht-form-label--radio utrecht-form-label--openforms">
             {{ widget.label }}
         </label>
     </p>
