:sparkles: [#4931] Display submission statistics based on timeline log events

--- a/src/openforms/forms/templates/admin/forms/formsubmissionstatisticsv2/change_list.html
+++ b/src/openforms/forms/templates/admin/forms/formsubmissionstatisticsv2/change_list.html
@@ -33,8 +33,20 @@
                 </th>
             </tr>
         </thead>
+
+        <tbody>
+            {% for submission_statistic in aggregated_qs %}
+                <tr>
+                    <td>{{ submission_statistic.form_name }}</td>
+                    <td>{{ submission_statistic.submission_count }}</td>
+                    <td>{{ submission_statistic.first_submission }}</td>
+                    <td>{{ submission_statistic.last_submission }}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
     </table>
 </div>
+
 {% endblock %}
 
 {# No pagination - we display all aggregation results #}
