--- a/src/openforms/forms/templates/admin/forms/formsubmissionstatisticsv2/change_list.html
+++ b/src/openforms/forms/templates/admin/forms/formsubmissionstatisticsv2/change_list.html
@@ -37,10 +37,18 @@
         <tbody>
             {% for submission_statistic in aggregated_qs %}
                 <tr>
-                    <td>{{ submission_statistic.form_name }}</td>
-                    <td>{{ submission_statistic.submission_count }}</td>
-                    <td>{{ submission_statistic.first_submission }}</td>
-                    <td>{{ submission_statistic.last_submission }}</td>
+                    <td class="field-form_name">
+                        {{ submission_statistic.form_name }}
+                    </td>
+                    <td class="field-submission_count">
+                        {{ submission_statistic.submission_count }}
+                    </td>
+                    <td class="field-first_submission">
+                        {{ submission_statistic.first_submission }}
+                    </td>
+                    <td class="field-last_submission">
+                        {{ submission_statistic.last_submission }}
+                    </td>
                 </tr>
             {% endfor %}
         </tbody>
