--- a/src/openforms/scss/components/admin/_variablemapping.scss
+++ b/src/openforms/scss/components/admin/_variablemapping.scss
@@ -10,4 +10,9 @@
     vertical-align: middle;
     text-align: center;
   }
+
+  .errorlist {
+    padding-inline-start: 0;
+    margin-inline-start: 0;
+  }
 }
