:lipstick: [#4871] Display DMN config error messages above inputs
Ensure that the error messages for the DMN configuration are placed above the inputs

--- a/src/openforms/scss/components/builder/_builder.scss
+++ b/src/openforms/scss/components/builder/_builder.scss
@@ -213,4 +213,8 @@ div.flatpickr-calendar.open {
   @include bem.modifier('no-bottom-line') {
     border-bottom: 0;
   }
+
+  @include bem.modifier('display-block') {
+    display: block;
+  }
 }
