:sparkles: [open-formulieren/open-forms-sdk#76] Prefer ESM modules for the SDK if the browser supports it
Using module type scripts makes it possible to opt into the benefits
of bundle splitting where only code is loaded that will actually be
used.

This sets up a wrapper entrypoint/script gated behind the type=module
feature of browsers so it's not executed by browsers that don't
natively support modules yet. An extra advantage is that we can pass
all the necessary configuration via data attributes and process them
in our script, meaning we don't need inline scripts and CSP nonces
anymore for this.

Finally, the SDK ESM module is added to the preload list since we are
guaranteed that we'll need it, and we avoid a waterfall when loading
the entrypoint and then dynamically importing the SDK bundle - those
can be fetched in parallel.

--- a/src/openforms/forms/templates/forms/sdk_snippet.html
+++ b/src/openforms/forms/templates/forms/sdk_snippet.html
@@ -1,6 +1,22 @@
-{% load openforms %}{% if form %}{% with 'openforms-container' as div_id %}
-<div id="{{ div_id }}"></div>
-<script src="{{ sdk_js_url }}" nomodule></script>
+{% load openforms static %}{% if form %}{% with 'openforms-container' as div_id %}
+{# Preload the module #}
+<link href="{{ sdk_esm_url }}" rel="modulepreload" />
+<div
+    class="open-forms-sdk-root"
+    id="{{ div_id }}"
+    data-sdk-module="{{ sdk_esm_url }}"
+    data-form-id="{{ form.slug }}"
+    data-base-url="{% api_base_url %}"
+    data-base-path="{% if base_path %}{{ base_path }}{% else %}{% url 'forms:form-detail' slug=form.slug %}{% endif %}"
+    data-csp-nonce="{{ request.csp_nonce }}"
+    {% if sdk_sentry_dsn %}data-sentry-dsn{% endif %}
+    {% if sdk_sentry_env %}data-sentry-env{% endif %}
+></div>
+{# Modern browsers support modules, legacy browsers ignore this and use the fallback #}
+<script type="module" src="{% static 'sdk-wrapper.mjs' %}"></script>
+
+{# Fallback #}
+<script src="{{ sdk_umd_url }}" nomodule></script>
 <script nonce="{{ request.csp_nonce }}" nomodule>
     const formId = '{{ form.slug|escapejs }}';
     const baseUrl = '{% filter escapejs %}{% api_base_url %}{% endfilter %}';
