--- a/src/openforms/forms/templates/forms/sdk_info_banner.html
+++ b/src/openforms/forms/templates/forms/sdk_info_banner.html
@@ -1,6 +1,6 @@
 {% load i18n %}{% if enabled %}
 <div class="info-bar">
     <span>{% trans "Javascript SDK used" %}</span>
-    <code>{{ sdk_js_url }}</code>
+    <code>{{ sdk_umd_url }}</code>
 </div>
 {% endif %}
