:wheelchair: [#4622] Accessible textual alternative for logo
The previous textual alternative, using `aria-label`, wasn't targetable by screen readers (tested using the macOS VoiceOver screen reader).
By providing the textual alternative as real content the screen reader can find and read the content.

--- a/src/openforms/scss/pdfs/_index.scss
+++ b/src/openforms/scss/pdfs/_index.scss
@@ -7,5 +7,6 @@
 @import 'metadata';
 @import 'submission-step';
 @import 'submission-step-row';
+@import 'screen-reader';
 @import 'payment-info';
 @import 'privacy-policy';
