--- a/src/openforms/ui/static/ui/scss/_nlds.scss
+++ b/src/openforms/ui/static/ui/scss/_nlds.scss
@@ -1,6 +1,6 @@
-@import '@utrecht/components/heading-2/css/index.scss';
-@import '@utrecht/components/link-list/css/index.scss';
-@import '@utrecht/components/page/css/index.scss';
-@import '@utrecht/components/page-content/css/index.scss';
-@import '@utrecht/components/page-header/css/index.scss';
-@import '@utrecht/components/page-footer/css/index.scss';
+@import '@utrecht/components/heading-2';
+@import '@utrecht/components/link-list';
+@import '@utrecht/components/page';
+@import '@utrecht/components/page-content';
+@import '@utrecht/components/page-header';
+@import '@utrecht/components/page-footer';
