:children_crossing: Declutter variables table a bit more
The component variables are now grouped by the step they occur in, and
the column with the form definition name is removed. Variables are
sorted alphabetically, which should give a stable ordering of variables
inside of a step (or other tab). The steps are of course rendered in
order of definition.

The key of a component is now properly marked up as code, as it is a
system identifier and can help with quickly visual scanning which key
is required in logic rules.

--- a/src/openforms/scss/components/admin/_variables-table.scss
+++ b/src/openforms/scss/components/admin/_variables-table.scss
@@ -1,3 +1,5 @@
+@use 'microscope-sass/lib/bem';
+
 @import '../../../ui/static/ui/scss/settings';
 
 .variables-table {
@@ -19,8 +21,15 @@
     padding-left: 0 !important;
   }
 
-  &__row {
-    &--errors {
+  @include bem.element('step-name') {
+    text-decoration: underline;
+    text-decoration-style: dashed;
+    text-underline-offset: 5px;
+    text-decoration-thickness: 0.5px;
+  }
+
+  @include bem.element('row') {
+    @include bem.modifier('errors') {
       td {
         vertical-align: bottom !important;
       }
@@ -28,6 +37,10 @@
 
     .checkbox-row {
       padding: $grid-margin-1; // Same padding as the icon
+    }
+
+    code {
+      font-size: 100%;
     }
   }
 }
