:bug: [#5155] Add initial data reference to `onLanguageChange` callback
Previously, the initial data reference would be lost when switching language during filling out a form. This is because, as of GH-4600, we reload the entire page on a language switch to update all links.

Now, the initial data reference is passed to the `onLanguageChange` callback, so we can add it to the link when reloading the form.

Backport-of: #5175

--- a/src/openforms/forms/templates/forms/sdk_snippet.html
+++ b/src/openforms/forms/templates/forms/sdk_snippet.html
@@ -23,7 +23,16 @@
             {% if sdk_sentry_dsn %}sentryDSN,{% endif %}
             {% if sdk_sentry_env %}sentryEnv,{% endif %}
             languageSelectorTarget: '#react-portal--language-selection',
-            onlanguagechange: () => window.location.reload(),
+            onLanguageChange: (newLanguageCode, initialDataReference) => {
+                // URL handling in JS requires a proper base since you can't just feed `foo` or `/foo`
+                // to the constructor. We only extract the pathname + query string again at the end.
+                const base = window.location.origin;
+                const url = new URL(basePath, base);
+                if (initialDataReference) {
+                    url.searchParams.set('initial_data_reference', initialDataReference);
+                }
+                window.location.replace(`${url.pathname}${url.search}`);
+            },
         }
     );
     form.init();
